# Materials_Research

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/Camera/: camera.hpp  pinhole.hpp
include/Core/: constant.hpp  gltfloader.hpp  info.hpp  logger.hpp  objloader.hpp  ray.hpp  renderer.hpp  sceneloader.hpp
include/Image/: Image.hpp  image.hpp  image_io.hpp  texture.hpp  tone_map.hpp
include/Integrator/: basecolor_checker.hpp  classical.hpp  integrator.hpp  normal_checker.hpp  pathtrace.hpp  texcoord_checker.hpp
include/Material/: blinn_phong.hpp  bsdf.hpp  cook_torrance.hpp  disney_brdf.hpp  ggx.hpp  ideal_reflection.hpp  ideal_refraction.hpp  iridenscent.hpp  lambert.hpp  material.hpp  phong.hpp
include/Math/: bsdf_math.hpp  vecop.hpp
include/Sampler/: rng.hpp  sampler.hpp
include/Scene/: model.hpp  scene.hpp  sphere.hpp
scene/: scene.json
src/: Cmake_test.cpp  Image_test.cpp  Pathtracer_test.cpp  embree_scene_test.cpp  embree_test.cpp  gltf_loader_test.cpp  obj_loader_test.cpp  render_test.cpp  scene_loader.cpp  texture.cpp
